--- a/app/src/main/res/layout/activity_pod_interrupcion_causa.xml
+++ b/app/src/main/res/layout/activity_pod_interrupcion_causa.xml
@@ -6,12 +6,9 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".PodInterrupcionCausaActivity">
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical">
 
@@ -78,71 +75,74 @@ tools:context=".PodInterrupcionCausaActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp">
-
-            <Button
-                android:id="@+id/button_pod_causas_confirmar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/confirmar_causa"
-                android:textColor="@color/colorWhite"
-                android:background = "@drawable/rounded_button_orange"/>
-
-            <TextView
-                android:id="@+id/textview_pod_causa_seleccionada"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/causa_seleccionada"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15sp"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorBlue"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/linearlayout_pod_detalle_tarea"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:background="@color/colorBlue">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginRight="2dp"
-                android:layout_marginLeft="2dp"
-                android:background="@color/colorWhite">
+                android:layout_gravity="center_horizontal">
 
-                <ListView
-                    android:id="@+id/listview_pod_causas"
+                <Button
+                    android:id="@+id/button_pod_causas_confirmar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </ListView>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/confirmar_causa"
+                    android:textColor="@color/colorWhite"
+                    android:background = "@drawable/rounded_button_orange"/>
+
+                <TextView
+                    android:id="@+id/textview_pod_causa_seleccionada"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/causa_seleccionada"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginBottom="15sp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorBlue"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearlayout_pod_detalle_tarea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/colorBlue">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="2dp"
+                    android:background="@color/colorWhite">
+
+                    <ListView
+                        android:id="@+id/listview_pod_causas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </ListView>
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
-</ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
