--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -9,168 +9,194 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:scrollbars="vertical">
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:elevation="4dp"
-
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-
-                app:contentInsetStart="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-
-                tools:layout_editor_absoluteX="0dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="start">
-
-                        <Button
-                            android:id="@+id/button_pod_detalle_atras"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/ic_arrow_back_white_24dp"
-                            android:backgroundTint="@color/colorWhite" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/detalle_de_tarea"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.appcompat.widget.Toolbar>
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/linearlayout_pod_detalle_tarea"
+                android:id="@+id/linearlayout_pod_detalle_progressbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:visibility="gone">
+                <ProgressBar
+                    android:id="@+id/progressBar_pod_detalle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="visible">
+                </ProgressBar>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearlayout_pod_detalle_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:scrollbars="vertical">
 
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/rounded_button_blue">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="15sp"
-                    android:layout_marginBottom="15sp"
-                    android:layout_marginLeft="15sp"
-                    android:layout_marginRight="15sp">
 
-                    <TextView
-                        android:id="@+id/textview_pod_detalle_descripcion"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/descripci_n"
-                        android:textColor="@color/colorWhite" />
+                    android:elevation="4dp"
 
-                    <TextView
-                        android:id="@+id/textview_pod_detalle_hora_inicio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/hora_programada_inicio"
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginTop="15sp"/>
+                    android:background="?attr/colorPrimary"
+                    android:minHeight="?attr/actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
 
-                    <TextView
-                        android:id="@+id/textview_pod_detalle_hora_fin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/hora_programada_fin"
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginTop="15sp"/>
+                    app:contentInsetStart="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 
-                    <TextView
-                        android:id="@+id/textview_pod_detalle_hora_interrupcion"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginTop="15sp"/>
+                    tools:layout_editor_absoluteX="0dp">
 
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="start">
 
+                            <Button
+                                android:id="@+id/button_pod_detalle_atras"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginStart="10dp"
+                                android:background="@drawable/ic_arrow_back_white_24dp"
+                                android:backgroundTint="@color/colorWhite" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/detalle_de_tarea"
+                                android:textAlignment="center"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </androidx.appcompat.widget.Toolbar>
 
                 <LinearLayout
+                    android:id="@+id/linearlayout_pod_detalle_tarea"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="15sp"
-                    android:layout_marginLeft="15sp"
-                    android:layout_marginRight="15sp">
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
 
-                    <Button
-                        android:id="@+id/button_pod_detalle_iniciar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/iniciar"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/rounded_button_gray"/>
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/rounded_button_blue">
 
-                    <Button
-                        android:id="@+id/button_pod_detalle_terminar"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:orientation="vertical"
                         android:layout_marginTop="15sp"
-                        android:text="TERMINAR"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/rounded_button_gray"/>
+                        android:layout_marginBottom="15sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp">
 
-                    <Button
-                        android:id="@+id/button_pod_detalle_interrupcion"
+                        <TextView
+                            android:id="@+id/textview_pod_detalle_descripcion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/descripci_n"
+                            android:textColor="@color/colorWhite" />
+
+                        <TextView
+                            android:id="@+id/textview_pod_detalle_hora_inicio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/hora_programada_inicio"
+                            android:textColor="@color/colorWhite"
+                            android:layout_marginTop="15sp"/>
+
+                        <TextView
+                            android:id="@+id/textview_pod_detalle_hora_fin"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/hora_programada_fin"
+                            android:textColor="@color/colorWhite"
+                            android:layout_marginTop="15sp"/>
+
+                        <TextView
+                            android:id="@+id/textview_pod_detalle_hora_interrupcion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textColor="@color/colorWhite"
+                            android:layout_marginTop="15sp"/>
+
+                    </LinearLayout>
+
+
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15sp"
-                        android:text="@string/interrupci_n"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/rounded_button_gray"/>
+                        android:orientation="vertical"
+                        android:layout_marginBottom="15sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp">
+
+                        <Button
+                            android:id="@+id/button_pod_detalle_iniciar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/iniciar"
+                            android:textColor="@color/colorWhite"
+                            android:background="@drawable/rounded_button_gray"/>
+
+                        <Button
+                            android:id="@+id/button_pod_detalle_terminar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15sp"
+                            android:text="TERMINAR"
+                            android:textColor="@color/colorWhite"
+                            android:background="@drawable/rounded_button_gray"/>
+
+                        <Button
+                            android:id="@+id/button_pod_detalle_interrupcion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15sp"
+                            android:text="@string/interrupci_n"
+                            android:textColor="@color/colorWhite"
+                            android:background="@drawable/rounded_button_gray"/>
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
 
             </LinearLayout>
-
 
         </LinearLayout>
 
