--- a/app/src/main/res/layout/activity_pod_finalizar_tarea.xml
+++ b/app/src/main/res/layout/activity_pod_finalizar_tarea.xml
@@ -1,158 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:orientation="vertical"
+
     tools:context=".PodFinalizarTareaActivity">
 
-    <ScrollView
+
+    <LinearLayout
+        android:id="@+id/linearlayout_pod_finalizar_progressbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:visibility="gone">
+        <ProgressBar
+            android:id="@+id/progressBar_pod_finalizar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:scrollbars="vertical">
+            android:layout_gravity="center"
+            android:visibility="visible">
+        </ProgressBar>
 
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+    </LinearLayout>
 
-                android:elevation="4dp"
-
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-
-                app:contentInsetStart="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-
-                tools:layout_editor_absoluteX="0dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="start">
-
-                        <Button
-                            android:id="@+id/button_pod_detalle_finalizar_tarea_atras"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/ic_arrow_back_white_24dp"
-                            android:backgroundTint="@color/colorWhite" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/finalizar_tarea"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.appcompat.widget.Toolbar>
-
-            <LinearLayout
-                android:id="@+id/linearlayout_pod_detalle_tarea"
+    <LinearLayout
+                android:id="@+id/linearlayout_pod_finalizar_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/rounded_button_blue">
+                android:scrollbars="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/progreso"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorWhite"
-                    android:layout_marginTop="15sp"
-                    android:layout_marginStart="15sp"/>
-
-                <LinearLayout
-                    android:id="@+id/linearlayout_pod_detalle_finalizar_tarea"
+                <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="15sp"
-                    android:layout_marginLeft="15sp"
-                    android:layout_marginRight="15sp">
 
-                    <EditText
-                        android:id="@+id/edittext_pod_detalle_finalizar_tarea_avance"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
-                        android:hint="@string/_0"
-                        android:inputType="number"
-                        android:textColorHint="@color/colorWhite"
-                        android:textSize="18sp"
-                        android:textColor="@color/colorWhite"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"/>
-                    <TextView
-                        android:id="@+id/textview_pod_detalle_finalizar_tarea_avance"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/_100"
-                        android:textSize="18sp"
-                        android:textColor="@color/colorWhite" />
+                    android:elevation="4dp"
 
-                </LinearLayout>
+                    android:background="?attr/colorPrimary"
+                    android:minHeight="?attr/actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
 
+                    app:contentInsetStart="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
+                    tools:layout_editor_absoluteX="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="start">
+
+                            <Button
+                                android:id="@+id/button_pod_detalle_finalizar_tarea_atras"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginStart="10dp"
+                                android:background="@drawable/ic_arrow_back_white_24dp"
+                                android:backgroundTint="@color/colorWhite" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/finalizar_tarea"
+                                android:textAlignment="center"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </androidx.appcompat.widget.Toolbar>
 
                 <LinearLayout
+                    android:id="@+id/linearlayout_pod_detalle_tarea"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="15sp"
-                    android:layout_marginBottom="15sp"
-                    android:layout_marginLeft="15sp"
-                    android:layout_marginRight="15sp">
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/rounded_button_blue">
 
-                    <Button
-                        android:id="@+id/button_pod_detalle_finalizar_tarea_confirmar"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/progreso"
+                        android:textSize="18sp"
+                        android:textColor="@color/colorWhite"
+                        android:layout_marginTop="15sp"
+                        android:layout_marginStart="15sp"/>
+
+                    <LinearLayout
+                        android:id="@+id/linearlayout_pod_detalle_finalizar_tarea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/finalizar_tarea"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/rounded_button_red"/>
+                        android:orientation="horizontal"
+                        android:layout_marginTop="15sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp">
+
+                        <EditText
+                            android:id="@+id/edittext_pod_detalle_finalizar_tarea_avance"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
+                            android:hint="@string/_0"
+                            android:inputType="number"
+                            android:textColorHint="@color/colorWhite"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorWhite"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"/>
+                        <TextView
+                            android:id="@+id/textview_pod_detalle_finalizar_tarea_avance"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/_100"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorWhite" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginTop="15sp"
+                        android:layout_marginBottom="15sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp">
+
+                        <Button
+                            android:id="@+id/button_pod_detalle_finalizar_tarea_confirmar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/finalizar_tarea"
+                            android:textColor="@color/colorWhite"
+                            android:background="@drawable/rounded_button_red"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-    </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
