--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -156,6 +156,21 @@
                     android:textColor="@color/colorWhite"
                     android:background = "@drawable/rounded_button_blue"/>
 
+                <Button
+                    android:id="@+id/button_menu_dashboard"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginBottom="20sp"
+                    android:layout_marginRight="20sp"
+                    android:layout_marginLeft="20sp"
+
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/dashboard"
+                    android:textColor="@color/colorWhite"
+                    android:background = "@drawable/rounded_button_blue"/>
+
             </LinearLayout>
 
             <LinearLayout
