--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -129,6 +129,14 @@
                             android:textColor="@color/colorWhite" />
 
                         <TextView
+                            android:id="@+id/textview_pod_detalle_capataz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/capataz"
+                            android:textColor="@color/colorWhite"
+                            android:layout_marginTop="15sp"/>
+
+                        <TextView
                             android:id="@+id/textview_pod_detalle_hora_inicio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
